Ajustando links da navbar

--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
     <div class="">
         <nav class="white" role="navigation">
             <div class="nav-wrapper container">
-                <a id="logo-container" href="index.php" class="brand-logo"><img src="images/iconelogo.png"
+                <a id="logo-container" href="index.html" class="brand-logo"><img src="images/iconelogo.png"
                         alt="Ícone Logo Click" /></a>
                 <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
                 <ul class="right hide-on-med-and-down">
-                    <li><a href="index.php">Home</a></li>
-                    <li><a href="index.php#services">Serviços</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="index.html#services">Serviços</a></li>
                     <li><a href="#web">Web</a></li>
                     <li><a href="#mobile">Mobile</a></li>
                     <li><a href="#mkt">Marketing Digital</a></li>
@@ -50,7 +50,7 @@
                 </ul>
         </nav>
         <ul id="nav-mobile" class="sidenav">
-            <li><a href="index.php">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="#services">Serviços</a></li>
             <li><a href="#web">Web</a></li>
             <li><a href="#mobile">Mobile</a></li>
