Testando nova responsividade

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <div id="img-header" class="col s12 m4 offset-m2">
                     <img  class="img-header center img-fluid d-flex w-100 h-auto" src="images/webresponsive.png" alt="">
                 </div>
-                <div class="col m4 s12">
+                <div id="mainLogo" class="col m4 s12">
                     <div class="text-header center">
                         <h1>Click Junior</h1>
                         <h4>Soluções a um Click</h4>
@@ -157,21 +157,7 @@
                         <h3 class="cjc title" style="text-align: center">Desenvolvimento WEB</h3>
                     </div>
 
-                    <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
-                        <div class="carousel-inner">
-                            <div class="carousel-item active">
-                            <img class="d-block w-100" src="images/web1.png" alt="First slide">
-                            </div>
-                            <div class="carousel-item">
-                            <img class="d-block w-100" src="images/web1.png" alt="Second slide">
-                            </div>
-                            <div class="carousel-item">
-                            <img class="d-block w-100" src="images/web1.png" alt="Third slide">
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="row">
+                    <div class="row display-block">
                         <div class="col offset-m1 m5 s12 boxcard">
                             <h4 class="center cjc">Leve sua marca para internet!</h4>
                             <p class="just text-devw cjc">
