Ajustes da responsividade dos títulos

--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
     <div id="index-banner" class="parallax-container" style="padding-top: 30px;">
         <div class="parallax"><img class="bg" src="images/background1.png" alt="Unsplashed background img 1"></div>
         <div class="container">
-            <div class="row">
+            <div class="row flex-direction">
                 <div id="img-header" class="col s12 m4 offset-m2">
-                    <img  class="img-header center img-fluid d-flex w-100 h-auto" src="images/webresponsive.png" alt="">
+                    <img  class="img-header center img-fluid d-flex w-auto h-75" src="images/webresponsive.png" alt="">
                 </div>
                 <div id="mainLogo" class="col m4 s12">
                     <div class="text-header center">
@@ -154,7 +154,7 @@
             <div class="row">
                 <div class="col s12 center">
                     <div class="title">
-                        <h3 class="cjc title" style="text-align: center">Desenvolvimento WEB</h3>
+                        <h3 id="fontealterar" class="cjc title" style="text-align: center">Desenvolvimento WEB</h3>
                     </div>
 
                     <div class="row display-block">
@@ -188,7 +188,7 @@
         <div class="section no-pad-bot">
             <div class="container">
                 <div class="title">
-                    <h3 class="title-mobile center title">Desenvolvimento Mobile</h3>
+                    <h3 id="fontealterar" class="title-mobile center title">Desenvolvimento Mobile</h3>
                 </div>
                 <div class="row">
                     <div class="col s6">
@@ -214,7 +214,7 @@
     <div class="container" id="offers">
         <div class="section">
             <div class="title">
-                <h3 class="center cjc title" style="margin-bottom: 60px;">Desenvolvimento de Sites</h3>
+                <h3 id="fontealterar" class="center cjc title" style="margin-bottom: 60px;">Desenvolvimento de Sites</h3>
             </div>
             <div class="row">
                 <div id="card1" class="col m4">
